# pokesilver

./: .gitignore  CMakeLists.txt  README.md  assets_manifest_pokesilver.h  launcher_main.cpp  pokesilver.c  pokesilver.h  pokesilver_dispatch_chunk_0.c  pokesilver_dispatch_chunk_1.c  pokesilver_dispatch_chunk_2.c  pokesilver_dispatch_chunk_3.c  pokesilver_funcs_0.c  pokesilver_funcs_1.c  pokesilver_funcs_10.c  pokesilver_funcs_11.c  pokesilver_funcs_12.c  pokesilver_funcs_13.c  pokesilver_funcs_14.c  pokesilver_funcs_15.c  pokesilver_funcs_16.c  pokesilver_funcs_17.c  pokesilver_funcs_18.c  pokesilver_funcs_19.c  pokesilver_funcs_2.c  pokesilver_funcs_20.c  pokesilver_funcs_21.c  pokesilver_funcs_22.c  pokesilver_funcs_23.c  pokesilver_funcs_24.c  pokesilver_funcs_25.c  pokesilver_funcs_26.c  pokesilver_funcs_27.c  pokesilver_funcs_28.c  pokesilver_funcs_29.c  pokesilver_funcs_3.c  pokesilver_funcs_30.c  pokesilver_funcs_31.c  pokesilver_funcs_32.c  pokesilver_funcs_33.c  pokesilver_funcs_34.c  (+25 more)
tools/: regen.sh
